# ghc-mod-socket

./: README.md  ghc-mod-socket.cabal
src/: Cabal.hs  Main.hs  Server.hs
